将停车场数据动静分离缓存在redis中，修改了停车场增删改查逻辑